# gtk-app-launcher-rs

./: Cargo.toml  LICENSE  README.md
src/: installed_app_finder.rs  main.rs
