[package]
name = "apps-iconview"
version = "0.1.0"
authors = ["artonio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.0"
glib = "0.9.0"
gio = "0.8.0"
gtk-sys = "0.9.2"
gdk-sys = "0.9.1"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
regex = "1.3.3"